# chiavdf

./: CMakeLists.txt  SConstruct  create_discriminant.h  include.h  install.sh  pyproject.toml  setup.py  vdf_client.cpp  vdf_client.h
.github/workflows/: build.yml  pythonpackage.yml
python_bindings/: fastvdf.cpp  launch.cpp
src/: Makefile.vdf-client  asm_avx512_ifma.h  asm_fast_integer.h  asm_main.h  avx512_test.cpp  compile_asm.cpp  fast_integer.h  generic.h  include.h  integer.h  threading.h  vdf.h  vdf_bench.cpp  vdf_fast_new.h
src/include/: include.h  vdf_fast.h
src/python_bindings/: fastvdf.cpp
